Change typography preview mode

--- a/frontend/src/_stories/0-Typography.stories.mdx
+++ b/frontend/src/_stories/0-Typography.stories.mdx
@@ -19,26 +19,32 @@ import colors from "theme/colors";
 
 **Background:** primary color
 
-<ColorfulTypeset
-  foregroundColor={colors.textWhiteHighEmphasis}
-  backgroundColor={colors.primary}
-  labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-  sampleText="KAML Kubernetes App Manangment ❤️"
-/>
+<Story name="whiteHighEmphasis in primary">
+  <ColorfulTypeset
+    foregroundColor={colors.textWhiteHighEmphasis}
+    backgroundColor={colors.primary}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    sampleText="KAML Kubernetes App Manangment ❤️"
+  />
+</Story>
 
-<ColorfulTypeset
-  foregroundColor={colors.textWhiteMediumEmphasis}
-  backgroundColor={colors.primary}
-  labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-  sampleText="KAML Kubernetes App Manangment ❤️"
-/>
+<Story name="whiteMediumEmphasis in primary">
+  <ColorfulTypeset
+    foregroundColor={colors.textWhiteMediumEmphasis}
+    backgroundColor={colors.primary}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    sampleText="KAML Kubernetes App Manangment ❤️"
+  />
+</Story>
 
-<ColorfulTypeset
-  foregroundColor={colors.textWhiteDisabledEmphasis}
-  backgroundColor={colors.primary}
-  labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-  sampleText="KAML Kubernetes App Manangment ❤️"
-/>
+<Story name="whiteDisabledEmphasis in primary">
+  <ColorfulTypeset
+    foregroundColor={colors.textWhiteDisabledEmphasis}
+    backgroundColor={colors.primary}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    sampleText="KAML Kubernetes App Manangment ❤️"
+  />
+</Story>
 
 ---
 
@@ -46,26 +52,32 @@ import colors from "theme/colors";
 
 **Background:** surface colors `colors.surfacePage` `colors.surfaceCard` `colors.surfaceAppUI`
 
-<ColorfulTypeset
-  foregroundColor={colors.textBlackHighEmphasis}
-  backgroundColor={colors.surfacePage}
-  labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-  sampleText="KAML Kubernetes App Manangment ❤️"
-/>
+<Story name="blackHighEmphsis in surfacePage">
+  <ColorfulTypeset
+    foregroundColor={colors.textBlackHighEmphasis}
+    backgroundColor={colors.surfacePage}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    sampleText="KAML Kubernetes App Manangment ❤️"
+  />
+</Story>
 
-<ColorfulTypeset
-  foregroundColor={colors.textBlackHighEmphasis}
-  backgroundColor={colors.surfaceCard}
-  labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-  sampleText="KAML Kubernetes App Manangment ❤️"
-/>
+<Story name="blackHighEmphsis in surfaceCard">
+  <ColorfulTypeset
+    foregroundColor={colors.textBlackHighEmphasis}
+    backgroundColor={colors.surfaceCard}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    sampleText="KAML Kubernetes App Manangment ❤️"
+  />
+</Story>
 
-<ColorfulTypeset
-  foregroundColor={colors.textBlackHighEmphasis}
-  backgroundColor={colors.surfaceAppUI}
-  labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-  sampleText="KAML Kubernetes App Manangment ❤️"
-/>
+<Story name="blackHighEmphsis in surfaceAppUI">
+  <ColorfulTypeset
+    foregroundColor={colors.textBlackHighEmphasis}
+    backgroundColor={colors.surfaceAppUI}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    sampleText="KAML Kubernetes App Manangment ❤️"
+  />
+</Story>
 
 ---
 
@@ -73,26 +85,32 @@ import colors from "theme/colors";
 
 **Background:** surface colors `colors.surfacePage` `colors.surfaceCard` `colors.surfaceAppUI`
 
-<ColorfulTypeset
-  foregroundColor={colors.textBlackMediumEmphasis}
-  backgroundColor={colors.surfacePage}
-  labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-  sampleText="KAML Kubernetes App Manangment ❤️"
-/>
+<Story name="blackMediumEmphasis in surfacePage">
+  <ColorfulTypeset
+    foregroundColor={colors.textBlackMediumEmphasis}
+    backgroundColor={colors.surfacePage}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    sampleText="KAML Kubernetes App Manangment ❤️"
+  />
+</Story>
 
-<ColorfulTypeset
-  foregroundColor={colors.textBlackMediumEmphasis}
-  backgroundColor={colors.surfaceCard}
-  labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-  sampleText="KAML Kubernetes App Manangment ❤️"
-/>
+<Story name="blackMediumEmphasis in surfaceCard">
+  <ColorfulTypeset
+    foregroundColor={colors.textBlackMediumEmphasis}
+    backgroundColor={colors.surfaceCard}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    sampleText="KAML Kubernetes App Manangment ❤️"
+  />
+</Story>
 
-<ColorfulTypeset
-  foregroundColor={colors.textBlackMediumEmphasis}
-  backgroundColor={colors.surfaceAppUI}
-  labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-  sampleText="KAML Kubernetes App Manangment ❤️"
-/>
+<Story name="blackMediumEmphasis in surfaceAppUI">
+  <ColorfulTypeset
+    foregroundColor={colors.textBlackMediumEmphasis}
+    backgroundColor={colors.surfaceAppUI}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    sampleText="KAML Kubernetes App Manangment ❤️"
+  />
+</Story>
 
 ---
 
@@ -100,23 +118,29 @@ import colors from "theme/colors";
 
 **Background:** surface colors `colors.surfacePage` `colors.surfaceCard` `colors.surfaceAppUI`
 
-<ColorfulTypeset
-  foregroundColor={colors.textBlackDisabledEmphasis}
-  backgroundColor={colors.surfacePage}
-  labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-  sampleText="KAML Kubernetes App Manangment ❤️"
-/>
+<Story name="blackDisabledEmphasis in surfacePage">
+  <ColorfulTypeset
+    foregroundColor={colors.textBlackDisabledEmphasis}
+    backgroundColor={colors.surfacePage}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    sampleText="KAML Kubernetes App Manangment ❤️"
+  />
+</Story>
 
-<ColorfulTypeset
-  foregroundColor={colors.textBlackDisabledEmphasis}
-  backgroundColor={colors.surfaceCard}
-  labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-  sampleText="KAML Kubernetes App Manangment ❤️"
-/>
+<Story name="blackDisabledEmphasis in surfaceCard">
+  <ColorfulTypeset
+    foregroundColor={colors.textBlackDisabledEmphasis}
+    backgroundColor={colors.surfaceCard}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    sampleText="KAML Kubernetes App Manangment ❤️"
+  />
+</Story>
 
-<ColorfulTypeset
-  foregroundColor={colors.textBlackDisabledEmphasis}
-  backgroundColor={colors.surfaceAppUI}
-  labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-  sampleText="KAML Kubernetes App Manangment ❤️"
-/>
+<Story name="blackDisabledEmphasis in surfaceAppUI">
+  <ColorfulTypeset
+    foregroundColor={colors.textBlackDisabledEmphasis}
+    backgroundColor={colors.surfaceAppUI}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    sampleText="KAML Kubernetes App Manangment ❤️"
+  />
+</Story>
