Fixed Kalm Typo and sample text

--- a/frontend/src/_stories/0-Typography.stories.mdx
+++ b/frontend/src/_stories/0-Typography.stories.mdx
@@ -6,6 +6,7 @@ import { H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, 
 
 import { ColorfulTypeset } from "./ColorfulTypeset";
 import colors from "theme/colors";
+const sampleText = "KALM Kubernetes App ❤️ Manager";
 
 <Meta title="Design System/Typography" />
 
@@ -24,7 +25,7 @@ import colors from "theme/colors";
     foregroundColor={colors.textWhiteHighEmphasis}
     backgroundColor={colors.primary}
     labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-    sampleText="KAML Kubernetes App Manangment ❤️"
+    sampleText={sampleText}
   />
 </Story>
 
@@ -33,7 +34,7 @@ import colors from "theme/colors";
     foregroundColor={colors.textWhiteMediumEmphasis}
     backgroundColor={colors.primary}
     labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-    sampleText="KAML Kubernetes App Manangment ❤️"
+    sampleText={sampleText}
   />
 </Story>
 
@@ -42,7 +43,7 @@ import colors from "theme/colors";
     foregroundColor={colors.textWhiteDisabledEmphasis}
     backgroundColor={colors.primary}
     labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-    sampleText="KAML Kubernetes App Manangment ❤️"
+    sampleText={sampleText}
   />
 </Story>
 
@@ -57,7 +58,7 @@ import colors from "theme/colors";
     foregroundColor={colors.textBlackHighEmphasis}
     backgroundColor={colors.surfacePage}
     labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-    sampleText="KAML Kubernetes App Manangment ❤️"
+    sampleText={sampleText}
   />
 </Story>
 
@@ -66,7 +67,7 @@ import colors from "theme/colors";
     foregroundColor={colors.textBlackHighEmphasis}
     backgroundColor={colors.surfaceCard}
     labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-    sampleText="KAML Kubernetes App Manangment ❤️"
+    sampleText={sampleText}
   />
 </Story>
 
@@ -75,7 +76,7 @@ import colors from "theme/colors";
     foregroundColor={colors.textBlackHighEmphasis}
     backgroundColor={colors.surfaceAppUI}
     labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-    sampleText="KAML Kubernetes App Manangment ❤️"
+    sampleText={sampleText}
   />
 </Story>
 
@@ -90,7 +91,7 @@ import colors from "theme/colors";
     foregroundColor={colors.textBlackMediumEmphasis}
     backgroundColor={colors.surfacePage}
     labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-    sampleText="KAML Kubernetes App Manangment ❤️"
+    sampleText={sampleText}
   />
 </Story>
 
@@ -99,7 +100,7 @@ import colors from "theme/colors";
     foregroundColor={colors.textBlackMediumEmphasis}
     backgroundColor={colors.surfaceCard}
     labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-    sampleText="KAML Kubernetes App Manangment ❤️"
+    sampleText={sampleText}
   />
 </Story>
 
@@ -108,7 +109,7 @@ import colors from "theme/colors";
     foregroundColor={colors.textBlackMediumEmphasis}
     backgroundColor={colors.surfaceAppUI}
     labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-    sampleText="KAML Kubernetes App Manangment ❤️"
+    sampleText={sampleText}
   />
 </Story>
 
@@ -123,7 +124,7 @@ import colors from "theme/colors";
     foregroundColor={colors.textBlackDisabledEmphasis}
     backgroundColor={colors.surfacePage}
     labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-    sampleText="KAML Kubernetes App Manangment ❤️"
+    sampleText={sampleText}
   />
 </Story>
 
@@ -132,7 +133,7 @@ import colors from "theme/colors";
     foregroundColor={colors.textBlackDisabledEmphasis}
     backgroundColor={colors.surfaceCard}
     labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-    sampleText="KAML Kubernetes App Manangment ❤️"
+    sampleText={sampleText}
   />
 </Story>
 
@@ -141,6 +142,6 @@ import colors from "theme/colors";
     foregroundColor={colors.textBlackDisabledEmphasis}
     backgroundColor={colors.surfaceAppUI}
     labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
-    sampleText="KAML Kubernetes App Manangment ❤️"
+    sampleText={sampleText}
   />
 </Story>
