--- a/frontend/src/_stories/0-Typography.stories.mdx
+++ b/frontend/src/_stories/0-Typography.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Typeset, Story, Preview, Props } from "@storybook/addon-docs/bloc
 
 import typography from "theme/typography";
 
-import { H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption } from "../widgets/Label";
+import { H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption } from "widgets/Label";
 
 import { ColorfulTypeset } from "./ColorfulTypeset";
 import colors from "theme/colors";
