--- a/frontend/src/_stories/overview/Typography.stories.mdx
+++ b/frontend/src/_stories/overview/Typography.stories.mdx
@@ -4,7 +4,7 @@ import typography from "theme/typography";
 
 import { H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption } from "widgets/Label";
 
-import { ColorfulTypeset } from "./ColorfulTypeset";
+import { ColorfulTypeset } from "../ColorfulTypeset";
 import colors from "theme/colors";
 const sampleText = "KALM Kubernetes App ❤️ Manager";
 
