Fixed BoldBody bug

--- a/frontend/src/_stories/overview/Typography.stories.mdx
+++ b/frontend/src/_stories/overview/Typography.stories.mdx
@@ -2,7 +2,7 @@ import { Meta, Typeset, Story, Preview, Props } from "@storybook/addon-docs/bloc
 
 import typography from "theme/typography";
 
-import { H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Caption, CenterCaption } from "widgets/Label";
+import { H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Body2, Caption, CenterCaption } from "widgets/Label";
 
 import { ColorfulTypeset } from "../ColorfulTypeset";
 import colors from "theme/colors";
@@ -24,7 +24,7 @@ const sampleText = "KALM Kubernetes App ❤️ Manager";
   <ColorfulTypeset
     foregroundColor={colors.textWhiteHighEmphasis}
     backgroundColor={colors.primary}
-    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Body2, Caption, CenterCaption]}
     sampleText={sampleText}
   />
 </Story>
@@ -33,7 +33,7 @@ const sampleText = "KALM Kubernetes App ❤️ Manager";
   <ColorfulTypeset
     foregroundColor={colors.textWhiteMediumEmphasis}
     backgroundColor={colors.primary}
-    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Body2, Caption, CenterCaption]}
     sampleText={sampleText}
   />
 </Story>
@@ -42,7 +42,7 @@ const sampleText = "KALM Kubernetes App ❤️ Manager";
   <ColorfulTypeset
     foregroundColor={colors.textWhiteDisabledEmphasis}
     backgroundColor={colors.primary}
-    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Body2, Caption, CenterCaption]}
     sampleText={sampleText}
   />
 </Story>
@@ -57,7 +57,7 @@ const sampleText = "KALM Kubernetes App ❤️ Manager";
   <ColorfulTypeset
     foregroundColor={colors.textBlackHighEmphasis}
     backgroundColor={colors.surfacePage}
-    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Body2, Caption, CenterCaption]}
     sampleText={sampleText}
   />
 </Story>
@@ -66,7 +66,7 @@ const sampleText = "KALM Kubernetes App ❤️ Manager";
   <ColorfulTypeset
     foregroundColor={colors.textBlackHighEmphasis}
     backgroundColor={colors.surfaceCard}
-    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Body2, Caption, CenterCaption]}
     sampleText={sampleText}
   />
 </Story>
@@ -75,7 +75,7 @@ const sampleText = "KALM Kubernetes App ❤️ Manager";
   <ColorfulTypeset
     foregroundColor={colors.textBlackHighEmphasis}
     backgroundColor={colors.surfaceAppUI}
-    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Body2, Caption, CenterCaption]}
     sampleText={sampleText}
   />
 </Story>
@@ -90,7 +90,7 @@ const sampleText = "KALM Kubernetes App ❤️ Manager";
   <ColorfulTypeset
     foregroundColor={colors.textBlackMediumEmphasis}
     backgroundColor={colors.surfacePage}
-    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Body2, Caption, CenterCaption]}
     sampleText={sampleText}
   />
 </Story>
@@ -99,7 +99,7 @@ const sampleText = "KALM Kubernetes App ❤️ Manager";
   <ColorfulTypeset
     foregroundColor={colors.textBlackMediumEmphasis}
     backgroundColor={colors.surfaceCard}
-    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Body2, Caption, CenterCaption]}
     sampleText={sampleText}
   />
 </Story>
@@ -108,7 +108,7 @@ const sampleText = "KALM Kubernetes App ❤️ Manager";
   <ColorfulTypeset
     foregroundColor={colors.textBlackMediumEmphasis}
     backgroundColor={colors.surfaceAppUI}
-    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Body2, Caption, CenterCaption]}
     sampleText={sampleText}
   />
 </Story>
@@ -123,7 +123,7 @@ const sampleText = "KALM Kubernetes App ❤️ Manager";
   <ColorfulTypeset
     foregroundColor={colors.textBlackDisabledEmphasis}
     backgroundColor={colors.surfacePage}
-    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Body2, Caption, CenterCaption]}
     sampleText={sampleText}
   />
 </Story>
@@ -132,7 +132,7 @@ const sampleText = "KALM Kubernetes App ❤️ Manager";
   <ColorfulTypeset
     foregroundColor={colors.textBlackDisabledEmphasis}
     backgroundColor={colors.surfaceCard}
-    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Body2, Caption, CenterCaption]}
     sampleText={sampleText}
   />
 </Story>
@@ -141,7 +141,7 @@ const sampleText = "KALM Kubernetes App ❤️ Manager";
   <ColorfulTypeset
     foregroundColor={colors.textBlackDisabledEmphasis}
     backgroundColor={colors.surfaceAppUI}
-    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, BoldBody, Caption, CenterCaption]}
+    labels={[H1, H2, H3, H4, H5, H6, Subtitle1, Subtitle2, Body, Body2, Caption, CenterCaption]}
     sampleText={sampleText}
   />
 </Story>
